--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,12 +862,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
+        "outputId": "229383aa-7c86-4fa4-9744-5e589feaeaa5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Variable name  coefficient value  standard error  t-statistic   p-value\n",
+            "0         const              295.0        2.795085   105.542409  0.006032\n",
+            "1          East              110.0        4.506939    24.406809  0.026069\n",
+            "2         South              100.0        5.728220    17.457431  0.036427\n",
+            "3         North               85.0        5.728220    14.838817  0.042838\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "\n",
@@ -877,34 +893,55 @@
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "        \"\"\"\n",
+        "        Initializes the regression model class with independent and dependent variables,\n",
+        "        intercept setting, and regression type.\n",
+        "        \"\"\"\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type\n",
+        "        self.regression_type = regression_type.lower()  # Handle capitalization issues.\n",
         "        self.results = {}\n",
         "\n",
         "        if create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Add an intercept column to x if create_intercept is True.\"\"\"\n",
-        "        self.x = sm.add_constant(self.x)\n",
+        "        \"\"\"\n",
+        "        Adds a column of ones (named 'intercept') to the DataFrame x if create_intercept is True.\n",
+        "        \"\"\"\n",
+        "        self.x = sm.add_constant(self.x)  # Adds a constant column named 'const'.\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Perform OLS regression and store the results in the results dictionary.\"\"\"\n",
-        "        model = sm.OLS(self.y, self.x)\n",
-        "        ols_results = model.fit()\n",
+        "        \"\"\"\n",
+        "        Performs an OLS regression using the provided x and y data.\n",
+        "        Stores results in the 'results' dictionary with keys for coefficient, standard error,\n",
+        "        t-statistic, and p-value.\n",
+        "        \"\"\"\n",
+        "        if self.regression_type != \"ols\":\n",
+        "            raise ValueError(\"Currently, only 'ols' regression is supported.\")\n",
         "\n",
-        "        for index, variable in enumerate(ols_results.params.index):\n",
+        "        # Fit the OLS model.\n",
+        "        model = sm.OLS(self.y, self.x).fit()\n",
+        "\n",
+        "        # Store results in the dictionary.\n",
+        "        for variable in model.params.index:\n",
         "            self.results[variable] = {\n",
-        "                \"coefficient\": ols_results.params[variable],\n",
-        "                \"standard_error\": ols_results.bse[variable],\n",
-        "                \"t_stat\": ols_results.tvalues[variable],\n",
-        "                \"p_value\": ols_results.pvalues[variable]\n",
+        "                \"coefficient\": model.params[variable],\n",
+        "                \"standard_error\": model.bse[variable],\n",
+        "                \"t_stat\": model.tvalues[variable],\n",
+        "                \"p_value\": model.pvalues[variable]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Display the regression results in a table format.\"\"\"\n",
+        "        \"\"\"\n",
+        "        Generates a summary table of the regression results in a DataFrame.\n",
+        "        Columns: Variable name, coefficient value, standard error, t-statistic, p-value.\n",
+        "        \"\"\"\n",
+        "        if not self.results:\n",
+        "            raise ValueError(\"No results found. Run ols_regression() first.\")\n",
+        "\n",
+        "        # Create a summary DataFrame from the results dictionary.\n",
         "        summary_df = pd.DataFrame({\n",
         "            \"Variable name\": list(self.results.keys()),\n",
         "            \"coefficient value\": [self.results[var][\"coefficient\"] for var in self.results],\n",
@@ -915,6 +952,23 @@
         "\n",
         "        return summary_df\n",
         "\n",
+        "# Example usage:\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Example DataFrames for x and y.\n",
+        "    data = {\n",
+        "        'East': [1, 0, 0, 1],\n",
+        "        'South': [0, 1, 0, 0],\n",
+        "        'North': [0, 0, 1, 0]\n",
+        "    }\n",
+        "    x_df = pd.DataFrame(data)\n",
+        "    y_df = pd.Series([400, 395, 380, 410])\n",
+        "\n",
+        "    # Create and run the regression model.\n",
+        "    reg_model = RegressionModel(x=x_df, y=y_df, create_intercept=True, regression_type=\"ols\")\n",
+        "    reg_model.ols_regression()\n",
+        "\n",
+        "    # Print the summary table.\n",
+        "    print(reg_model.summary())\n",
         "\n",
         "\n"
       ]
