--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -384,12 +384,6 @@
         "id": "96be259f-345e-4e4a-b95c-dd6eae210bf9"
       },
       "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "\n",
         "Again, we will start with our 1-D array, and in the cell below, we will make it a 2-D array, or a matrix:"
       ]
     },
@@ -868,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -876,57 +870,75 @@
       "outputs": [],
       "source": [
         "#si-exercise\n",
-        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import statsmodels.api as sm\n",
-        "import scipy.stats as stats\n",
+        "import scipy\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
+        "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type.lower()\n",
+        "\n",
         "\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
+        "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        if self.regression_type == 'ols':\n",
-        "            model = sm.OLS(self.y, self.x).fit()\n",
-        "            params = model.params\n",
-        "            bse = model.bse\n",
-        "            tvalues = model.tvalues\n",
-        "            pvalues = model.pvalues\n",
-        "            self.results = {}\n",
-        "            for variable in params.index:\n",
-        "                self.results[variable] = {\n",
-        "                    'coefficient': params[variable],\n",
-        "                    'standard_error': bse[variable],\n",
-        "                    't_stat': tvalues[variable],\n",
-        "                    'p_value': pvalues[variable]\n",
-        "                }\n",
-        "        else:\n",
-        "            raise ValueError(\"Unsupported regression type. Only 'ols' is supported at the moment.\")\n",
+        "        \"\"\"Estimates OLS regression results using NumPy.\"\"\"\n",
+        "\n",
+        "\n",
+        "        # Convert to NumPy arrays\n",
+        "        X = self.x.values\n",
+        "        Y = self.y.values.flatten()\n",
+        "\n",
+        "        # Calculate coefficients using the Normal Equation: (X'X)^(-1)X'Y\n",
+        "        XtX_inv = np.linalg.inv(X.T @ X)\n",
+        "        XtY = X.T @ Y\n",
+        "        self.coefficients = XtX_inv @ XtY\n",
+        "\n",
+        "        # Calculate predicted values and residuals\n",
+        "        Y_pred = X @ self.coefficients\n",
+        "        residuals = Y - Y_pred\n",
+        "\n",
+        "        # Calculate standard errors, t-statistics, and p-values\n",
+        "        n, p = X.shape\n",
+        "        residual_variance = (residuals.T @ residuals) / (n - p)\n",
+        "        standard_errors = np.sqrt(np.diag(residual_variance * XtX_inv))\n",
+        "        t_stats = self.coefficients / standard_errors\n",
+        "\n",
+        "        # Calculate p-values (two-tailed)\n",
+        "        p_values = (1 - self._t_distribution_cdf(np.abs(t_stats), n - p))\n",
+        "\n",
+        "        # Store results in a dictionary\n",
+        "        self.results = {\n",
+        "            var: {\n",
+        "                'coefficient': self.coefficients[i],\n",
+        "                'standard_error': standard_errors[i],\n",
+        "                't_stat': t_stats[i],\n",
+        "                'p_value': p_values[i]\n",
+        "            } for i, var in enumerate(self.x.columns)\n",
+        "        }\n",
+        "\n",
+        "        return self.results\n",
+        "\n",
+        "    def _t_distribution_cdf(self, t, df):\n",
+        "        \"\"\"Computes the CDF of the t-distribution.\"\"\"\n",
+        "        from scipy.stats import t as t_dist\n",
+        "        return t_dist.cdf(t, df)\n",
         "\n",
         "    def summary(self):\n",
-        "        if not hasattr(self, 'results'):\n",
-        "            raise AttributeError(\"The model hasn't been fitted yet. Call the ols_regression method first.\")\n",
+        "        \"\"\"Presents the regression results in a summary table.\"\"\"\n",
         "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
-        "        summary_df = summary_df.reset_index()\n",
+        "        summary_df.index.name = 'Variable name'\n",
+        "        summary_df.reset_index(inplace=True)\n",
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
-        "        return summary_df\n",
         "\n",
-        "# Example Usage:\n",
-        "# Assuming x and y are DataFrames\n",
-        "# model = RegressionModel(x, y, create_intercept=True, regression_type='ols')\n",
-        "# model.ols_regression()\n",
-        "# print(model.summary())\n",
-        "\n"
+        "        return summary_df"
       ]
     }
   ],
