--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,115 +862,83 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "229383aa-7c86-4fa4-9744-5e589feaeaa5"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  Variable name  coefficient value  standard error  t-statistic   p-value\n",
-            "0         const              295.0        2.795085   105.542409  0.006032\n",
-            "1          East              110.0        4.506939    24.406809  0.026069\n",
-            "2         South              100.0        5.728220    17.457431  0.036427\n",
-            "3         North               85.0        5.728220    14.838817  0.042838\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
-        "\n",
-        "import pandas as pd\n",
         "import numpy as np\n",
-        "import statsmodels.api as sm\n",
+        "import pandas as pd\n",
+        "import scipy\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        \"\"\"\n",
-        "        Initializes the regression model class with independent and dependent variables,\n",
-        "        intercept setting, and regression type.\n",
-        "        \"\"\"\n",
+        "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type.lower()  # Handle capitalization issues.\n",
-        "        self.results = {}\n",
         "\n",
-        "        if create_intercept:\n",
+        "\n",
+        "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"\n",
-        "        Adds a column of ones (named 'intercept') to the DataFrame x if create_intercept is True.\n",
-        "        \"\"\"\n",
-        "        self.x = sm.add_constant(self.x)  # Adds a constant column named 'const'.\n",
+        "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
+        "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"\n",
-        "        Performs an OLS regression using the provided x and y data.\n",
-        "        Stores results in the 'results' dictionary with keys for coefficient, standard error,\n",
-        "        t-statistic, and p-value.\n",
-        "        \"\"\"\n",
-        "        if self.regression_type != \"ols\":\n",
-        "            raise ValueError(\"Currently, only 'ols' regression is supported.\")\n",
+        "        \"\"\"Estimates OLS regression results using NumPy.\"\"\"\n",
         "\n",
-        "        # Fit the OLS model.\n",
-        "        model = sm.OLS(self.y, self.x).fit()\n",
         "\n",
-        "        # Store results in the dictionary.\n",
-        "        for variable in model.params.index:\n",
-        "            self.results[variable] = {\n",
-        "                \"coefficient\": model.params[variable],\n",
-        "                \"standard_error\": model.bse[variable],\n",
-        "                \"t_stat\": model.tvalues[variable],\n",
-        "                \"p_value\": model.pvalues[variable]\n",
-        "            }\n",
+        "        # Convert to NumPy arrays\n",
+        "        X = self.x.values\n",
+        "        Y = self.y.values.flatten()\n",
+        "\n",
+        "        # Calculate coefficients using the Normal Equation: (X'X)^(-1)X'Y\n",
+        "        XtX_inv = np.linalg.inv(X.T @ X)\n",
+        "        XtY = X.T @ Y\n",
+        "        self.coefficients = XtX_inv @ XtY\n",
+        "\n",
+        "        # Calculate predicted values and residuals\n",
+        "        Y_pred = X @ self.coefficients\n",
+        "        residuals = Y - Y_pred\n",
+        "\n",
+        "        # Calculate standard errors, t-statistics, and p-values\n",
+        "        n, p = X.shape\n",
+        "        residual_variance = (residuals.T @ residuals) / (n - p)\n",
+        "        standard_errors = np.sqrt(np.diag(residual_variance * XtX_inv))\n",
+        "        t_stats = self.coefficients / standard_errors\n",
+        "\n",
+        "        # Calculate p-values (two-tailed)\n",
+        "        p_values = (1 - self._t_distribution_cdf(np.abs(t_stats), n - p))\n",
+        "\n",
+        "        # Store results in a dictionary\n",
+        "        self.results = {\n",
+        "            var: {\n",
+        "                'coefficient': self.coefficients[i],\n",
+        "                'standard_error': standard_errors[i],\n",
+        "                't_stat': t_stats[i],\n",
+        "                'p_value': p_values[i]\n",
+        "            } for i, var in enumerate(self.x.columns)\n",
+        "        }\n",
+        "\n",
+        "        return self.results\n",
+        "\n",
+        "    def _t_distribution_cdf(self, t, df):\n",
+        "        \"\"\"Computes the CDF of the t-distribution.\"\"\"\n",
+        "        from scipy.stats import t as t_dist\n",
+        "        return t_dist.cdf(t, df)\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"\n",
-        "        Generates a summary table of the regression results in a DataFrame.\n",
-        "        Columns: Variable name, coefficient value, standard error, t-statistic, p-value.\n",
-        "        \"\"\"\n",
-        "        if not self.results:\n",
-        "            raise ValueError(\"No results found. Run ols_regression() first.\")\n",
+        "        \"\"\"Presents the regression results in a summary table.\"\"\"\n",
+        "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
+        "        summary_df.index.name = 'Variable name'\n",
+        "        summary_df.reset_index(inplace=True)\n",
+        "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
-        "        # Create a summary DataFrame from the results dictionary.\n",
-        "        summary_df = pd.DataFrame({\n",
-        "            \"Variable name\": list(self.results.keys()),\n",
-        "            \"coefficient value\": [self.results[var][\"coefficient\"] for var in self.results],\n",
-        "            \"standard error\": [self.results[var][\"standard_error\"] for var in self.results],\n",
-        "            \"t-statistic\": [self.results[var][\"t_stat\"] for var in self.results],\n",
-        "            \"p-value\": [self.results[var][\"p_value\"] for var in self.results]\n",
-        "        })\n",
-        "\n",
-        "        return summary_df\n",
-        "\n",
-        "# Example usage:\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Example DataFrames for x and y.\n",
-        "    data = {\n",
-        "        'East': [1, 0, 0, 1],\n",
-        "        'South': [0, 1, 0, 0],\n",
-        "        'North': [0, 0, 1, 0]\n",
-        "    }\n",
-        "    x_df = pd.DataFrame(data)\n",
-        "    y_df = pd.Series([400, 395, 380, 410])\n",
-        "\n",
-        "    # Create and run the regression model.\n",
-        "    reg_model = RegressionModel(x=x_df, y=y_df, create_intercept=True, regression_type=\"ols\")\n",
-        "    reg_model.ols_regression()\n",
-        "\n",
-        "    # Print the summary table.\n",
-        "    print(reg_model.summary())\n",
-        "\n",
-        "\n"
+        "        return summary_df"
       ]
     }
   ],
