--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -880,43 +880,33 @@
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "\n",
-        "\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
-        "        self.x['intercept'] = 1\n",
+        "        self.x = self.x.copy()  # Avoid SettingWithCopyWarning.\n",
+        "        self.x.loc[:, 'intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"Estimates OLS regression results using NumPy.\"\"\"\n",
-        "\n",
-        "\n",
-        "        # Convert to NumPy arrays\n",
         "        X = self.x.values\n",
         "        Y = self.y.values.flatten()\n",
         "\n",
-        "        # Calculate coefficients using the Normal Equation: (X'X)^(-1)X'Y\n",
         "        XtX_inv = np.linalg.inv(X.T @ X)\n",
         "        XtY = X.T @ Y\n",
         "        self.coefficients = XtX_inv @ XtY\n",
         "\n",
-        "        # Calculate predicted values and residuals\n",
         "        Y_pred = X @ self.coefficients\n",
         "        residuals = Y - Y_pred\n",
         "\n",
-        "        # Calculate standard errors, t-statistics, and p-values\n",
         "        n, p = X.shape\n",
         "        residual_variance = (residuals.T @ residuals) / (n - p)\n",
         "        standard_errors = np.sqrt(np.diag(residual_variance * XtX_inv))\n",
         "        t_stats = self.coefficients / standard_errors\n",
         "\n",
-        "        # Calculate p-values (two-tailed)\n",
         "        p_values = (1 - self._t_distribution_cdf(t_stats, n - p))\n",
-        "        #p_values = (1 - self._t_distribution_cdf(np.abs(t_stats), n - p))\n",
-        "        #p_values = 2 * (1 - norm.cdf(np.abs(t_stats)))\n",
         "\n",
-        "        # Store results in a dictionary\n",
         "        self.results = {\n",
         "            var: {\n",
         "                'coefficient': self.coefficients[i],\n",
@@ -939,6 +929,11 @@
         "        summary_df.index.name = 'Variable name'\n",
         "        summary_df.reset_index(inplace=True)\n",
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
+        "\n",
+        "        expected_vars = {'sex', 'age', 'educ', 'white', 'intercept'}\n",
+        "        missing_vars = expected_vars - set(summary_df['Variable name'])\n",
+        "        if missing_vars:\n",
+        "            raise ValueError(f\"Missing expected variables in summary: {missing_vars}\")\n",
         "\n",
         "        return summary_df\n"
       ]
