--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,47 +862,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "03c71402-9e93-4142-e0df-03f52699436a"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  Variable name  coefficient value  standard error  t-statistic  p-value\n",
-            "0           sex           49.75000             NaN          NaN      NaN\n",
-            "1           age            0.65625             NaN          NaN      NaN\n",
-            "2          educ            1.93750             NaN          NaN      NaN\n",
-            "3         white            6.59375             NaN          NaN      NaN\n",
-            "4     intercept           -7.50000             NaN          NaN      NaN\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-3-2040a233af7f>:34: RuntimeWarning: invalid value encountered in sqrt\n",
-            "  standard_errors = np.sqrt(np.diag(residual_variance * XtX_inv))\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from scipy.stats import norm\n",
+        "from scipy.stats import t as t_dist\n",
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool):\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
+        "        self.x = x.copy()  # Avoid SettingWithCopyWarning by using .copy()\n",
+        "        self.y = y.copy()  # Copy to avoid similar issues\n",
         "        self.create_intercept = create_intercept\n",
         "\n",
         "        if self.create_intercept:\n",
@@ -910,28 +885,33 @@
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
-        "        self.x = self.x.copy()\n",
-        "        self.x.loc[:, 'intercept'] = 1\n",
+        "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"Estimates OLS regression results using NumPy.\"\"\"\n",
+        "        # Convert DataFrames to NumPy arrays\n",
         "        X = self.x.values\n",
         "        Y = self.y.values.flatten()\n",
         "\n",
+        "        # Calculate coefficients using the normal equation: (X'X)^(-1)X'Y\n",
         "        XtX_inv = np.linalg.inv(X.T @ X)\n",
         "        XtY = X.T @ Y\n",
         "        self.coefficients = XtX_inv @ XtY\n",
         "\n",
+        "        # Calculate predicted values and residuals\n",
         "        Y_pred = X @ self.coefficients\n",
         "        residuals = Y - Y_pred\n",
         "\n",
+        "        # Calculate standard errors, t-statistics, and p-values\n",
         "        n, p = X.shape\n",
         "        residual_variance = (residuals.T @ residuals) / (n - p)\n",
         "        standard_errors = np.sqrt(np.diag(residual_variance * XtX_inv))\n",
         "        t_stats = self.coefficients / standard_errors\n",
         "\n",
-        "        p_values = (1 - self._t_distribution_cdf(t_stats, n - p))\n",
+        "        # Calculate p-values (two-tailed)\n",
+        "        p_values = 2 * (1 - t_dist.cdf(np.abs(t_stats), df=n - p))\n",
         "\n",
+        "        # Store results in a dictionary\n",
         "        self.results = {\n",
         "            var: {\n",
         "                'coefficient': self.coefficients[i],\n",
@@ -943,11 +923,6 @@
         "\n",
         "        return self.results\n",
         "\n",
-        "    def _t_distribution_cdf(self, t, df):\n",
-        "        \"\"\"Computes the CDF of the t-distribution.\"\"\"\n",
-        "        from scipy.stats import t as t_dist\n",
-        "        return t_dist.cdf(t, df)\n",
-        "\n",
         "    def summary(self):\n",
         "        \"\"\"Presents the regression results in a summary table.\"\"\"\n",
         "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
@@ -955,6 +930,7 @@
         "        summary_df.reset_index(inplace=True)\n",
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
+        "        # Ensure all required variables are present in the summary\n",
         "        expected_vars = {'sex', 'age', 'educ', 'white', 'intercept'}\n",
         "        actual_vars = set(summary_df['Variable name'])\n",
         "\n",
@@ -962,20 +938,7 @@
         "            raise ValueError(f\"Missing variables in summary: {expected_vars - actual_vars}\")\n",
         "\n",
         "        return summary_df\n",
-        "\n",
-        "# Example usage\n",
-        "data = {\n",
-        "    'sex': [0, 1, 0, 1],\n",
-        "    'age': [22, 35, 45, 50],\n",
-        "    'educ': [12, 16, 14, 18],\n",
-        "    'white': [1, 0, 1, 1]\n",
-        "}\n",
-        "x = pd.DataFrame(data)\n",
-        "y = pd.DataFrame([30, 40, 50, 60])\n",
-        "\n",
-        "model = RegressionModel(x, y, create_intercept=True)\n",
-        "model.ols_regression()\n",
-        "print(model.summary())\n"
+        "\n"
       ]
     }
   ],
