--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -874,22 +874,27 @@
         "import pandas as pd\n",
         "from scipy.stats import norm\n",
         "\n",
+        "import sys as system\n",
+        "import io\n",
+        "import re\n",
+        "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "\n",
+        "\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
-        "        self.x = self.x.copy()  # Avoids SettingWithCopyWarning\n",
-        "        self.x.loc[:, 'intercept'] = 1\n",
+        "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"Estimates OLS regression results using NumPy.\"\"\"\n",
+        "\n",
         "\n",
         "        # Convert to NumPy arrays\n",
         "        X = self.x.values\n",
@@ -911,7 +916,9 @@
         "        t_stats = self.coefficients / standard_errors\n",
         "\n",
         "        # Calculate p-values (two-tailed)\n",
-        "        p_values = 2 * (1 - norm.cdf(np.abs(t_stats)))\n",
+        "        p_values = (1 - self._t_distribution_cdf(t_stats, n - p))\n",
+        "        #p_values = (1 - self._t_distribution_cdf(np.abs(t_stats), n - p))\n",
+        "        #p_values = 2 * (1 - norm.cdf(np.abs(t_stats)))\n",
         "\n",
         "        # Store results in a dictionary\n",
         "        self.results = {\n",
@@ -925,6 +932,11 @@
         "\n",
         "        return self.results\n",
         "\n",
+        "    def _t_distribution_cdf(self, t, df):\n",
+        "        \"\"\"Computes the CDF of the t-distribution.\"\"\"\n",
+        "        from scipy.stats import t as t_dist\n",
+        "        return t_dist.cdf(t, df)\n",
+        "\n",
         "    def summary(self):\n",
         "        \"\"\"Presents the regression results in a summary table.\"\"\"\n",
         "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
@@ -932,10 +944,7 @@
         "        summary_df.reset_index(inplace=True)\n",
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
-        "        return summary_df\n",
-        "\n",
-        "\n",
-        "\n"
+        "        print(summary_df)\n"
       ]
     }
   ],
@@ -959,7 +968,6 @@
     },
     "colab": {
       "provenance": [],
-      "name": "Lesson.ipynb",
       "include_colab_link": true
     }
   },
